# tux64

./: .gitignore  AUTHORS  INSTALL.md  README.md  buildconf.sh  cleartoolchain.sh  installation-guide.txt  usetoolchain.sh
boot/: .gitignore  AUTHORS  Makefile.am  README  configure.ac
boot/src/: n64.ld  tux64-boot.h  tux64_boot.h
boot/src/stage0/: stage0.ld  stage0.s
boot/src/stage1/: stage1.c  stage1.ld
boot/src/stage2/: payload.h  payload.ld  stage2.c  stage2.ld
boot/src/tux64-boot/: arena-allocator.c  arena-allocator.h  builtin.c  builtin.h  cache.c  cache.h  checksum.c  checksum.h  exec.c  exec.h  gp.c  gp.h  halt.c  halt.h  idle.c  idle.h  initialize.c  initialize.h  ipl2.h  kernel.c  kernel.h  load.h  pi.c  pi.h  pif.c  pif.h  prelude.c  prelude.h  rsp.c  rsp.h  status.c  status.h  status.ld  sync.c  sync.h  tux64-boot.h  tux64-boot.ld
boot/src/tux64-boot/stage0/: stage0.S  stage0.ld  stage0.s
boot/src/tux64-boot/stage1/: arena-allocator.c  arena-allocator.h  boot-header.c  boot-header.h  boot-header.ld  fbcon.c  fbcon.h  fontmap.data  fontmap.rgb888.data  format.c  format.h  fsm.c  fsm.h  halt.c  halt.h  idle.c  idle.h  interrupt.c  interrupt.h  logo.c  logo.h  logo.rgba8888.data  memory.c  memory.h  percentage.c  percentage.h  preempt.c  preempt.h  rsp.c  rsp.h  service.h  service.s  stack.h  stack.ld  stage1.c  stage1.h  stage1.ld  start.c  status.c  status.h  (+10 more)
boot/src/tux64-boot/stage1/interrupt/: entry.h  entry.s  interrupt.c  interrupt.h
boot/src/tux64-boot/stage2/: memory.h  stack.h  stack.ld  stage2.c  stage2.h  stage2.ld  start.c  status.c  status.h
boot/src/tux64-boot/stage3/: payload.h  payload.ld  stage3.c  stage3.ld
develop/: README  install.sh
develop/headers/: config.h  tux64.h  types.h
develop/headers/platform-n64/: ai.h  memory_map.h  mi.h  pi.h  ri.h  rom.h  si.h  vi.h
develop/headers/platform_n64/: ai.h  boot.h  memory_map.h  mi.h  mmio.h  pi.h  ri.h  rom.h  si.h  vi.h
develop/ldscripts/: platform-n64.ld  tux64.ld
develop/ldscripts/platform_n64/: ai.ld  memory_map.ld  mi.ld  mmio.ld  pi.ld  ri.ld  si.ld  vi.ld
docs/: contributing.md  development.md  installation.md
fontcompiler/: Makefile.am  README  configure.ac
fontcompiler/src/tux64-fontcompiler/: arguments.c  arguments.h  generator.c  generator.h  tux64-fontcompiler.c  tux64-fontcompiler.h
lib/: Makefile.am  README  configure.ac
lib/ldscripts/platform_n64/: memory_map.ld  mmio.ld  platform_n64.ld
lib/src/: config.h  tux64.h  types.h
lib/src/platform-n64/: ai.h  boot.h  memory-map.h  mi.h  mmio.h  mmio.ld  pi.h  platform-n64.ld  ri.h  rom.h  si.h  vi.h
lib/src/platform_n64/: ai.h  boot.h  memory_map.h  memory_map.ld  mi.h  mmio.h  mmio.ld  pi.h  platform_n64.ld  ri.h  rom.h  si.h  vi.h
lib/src/tux64/: arguments.c  arguments.h  bitwise.c  bitwise.h  checksum.c  checksum.h  config.h  elf.h  endian.c  endian.h  fs.c  fs.h  log.c  log.h  math.c  math.h  memory.c  memory.h  string.c  string.h  tux64.h  types.h
lib/src/tux64/parse/: string-integer.c  string-integer.h
lib/src/tux64/platform-n64/: ai.h  boot.h  memory-map.h  memory-map.ld  mi.h  mmio.h  mmio.ld  pi.h  platform-n64.ld  ri.h  rom.h  si.h  vi.h
lib/src/tux64/platform/mips/n64/: ai.h  boot.c  boot.h  boot.ld  kernel.c  kernel.h  memory-map.c  memory-map.h  memory-map.ld  mi.h  mmio.h  mmio.ld  n64.ld  pi.c  pi.h  pif.h  rdram.h  ri.h  rom.h  si.h  sp.h  vi.h
lib/src/tux64/platform/mips/vr4300/: cache.c  cache.h  cop0.c  cop0.h  vr4300.h
mkrom/: Makefile.am  README  configure.ac
mkrom/src/tux64-mkrom/: arguments.c  arguments.h  builder.c  builder.h  kernel.c  kernel.h  tux64-mkrom.c  tux64-mkrom.h
patches/: ares-n64-boot-debug.patch  ares-n64-dmesg-trace.patch  ares-n64-pi-serial-trace.patch  gcc-mips-ignore-interrupt-requirements.patch  gcc-mips-noreturn-discard-callee-saved-registers.patch  linux-boot-setup.patch  linux-kconfig-tux64.patch
rescompiler/: Makefile.am  README  configure.ac
rescompiler/fontcompiler/: Makefile.am  configure.ac
rescompiler/fontcompiler/src/tux64-fontcompiler/: arguments.c  arguments.h  generator.c  generator.h  tux64-fontcompiler.c  tux64-fontcompiler.h
rescompiler/imagecompiler/: Makefile.am  README  configure.ac
rescompiler/imagecompiler/src/tux64-imagecompiler/: arguments.c  arguments.h  compressor.c  compressor.h  encoder.c  encoder.h  formatter.c  formatter.h  tux64-imagecompiler.c  tux64-imagecompiler.h
rescompiler/textcompiler/: Makefile.am  configure.ac
rescompiler/textcompiler/src/tux64-textcompiler/: arguments.c  arguments.h  formatter.c  formatter.h  lexer.c  lexer.h  tux64-textcompiler.c  tux64-textcompiler.h
scripts/: buildconf.sh  kernel-make.sh  usetoolchain.sh
sramdumper/: Makefile.am  README  configure.ac
sramdumper/src/tux64-sramdumper/: arguments.c  arguments.h  format.c  format.h  parse.c  parse.h  tux64-sramdumper.c  tux64-sramdumper.h
textcompiler/: Makefile.am  README  configure.ac
textcompiler/src/tux64-textcompiler/: arguments.c  arguments.h  formatter.c  formatter.h  lexer.c  lexer.h  tux64-textcompiler.c  tux64-textcompiler.h
