#------------------------------------------------------------------------------#
#                           Copyright (C) Tux64 2026                           #
#                     https://github.com/bradleycha/tux64                      #
#------------------------------------------------------------------------------#
# rescompiler/Makefile.ac - GNU Automake script for all resource compilers.    #
#------------------------------------------------------------------------------#

# all we're doing here is recursively building, so this is it.
SUBDIRS = \
	fontcompiler \
	textcompiler \
	imagecompiler

