#------------------------------------------------------------------------------#
#                           Copyright (C) Tux64 2026                           #
#                     https://github.com/bradleycha/tux64                      #
#------------------------------------------------------------------------------#
# rescompiler/configure.ac - GNU Autoconf script for all resource compiles.    #
#------------------------------------------------------------------------------#

AC_INIT([tux64-rescompiler], 0.1.0+setup, [bradleycha@proton.me])

AC_CONFIG_AUX_DIR([configdir])

AC_CONFIG_SUBDIRS([fontcompiler])
AC_CONFIG_SUBDIRS([textcompiler])

AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT

